# calvn

./: .gitignore  docker-compose.yml
.claude/: settings.local.json
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/: config.py  main.py  models.py
backend/src/agents/: __init__.py  jira_agent.py  oracle_agent.py  orchestrator.py
backend/src/db/: __init__.py  engine.py  models.py
backend/src/oracle/: __init__.py  parse.py  setup.py
backend/src/queue/: __init__.py  limiter.py  presence.py
backend/src/routes/: __init__.py  analytics.py  chat.py  presence.py  settings.py  skills.py  status.py
backend/src/skills/: __init__.py  registry.py
backend/src/skills/definitions/: defect_summary.yaml  jira_triage.yaml  root_cause.yaml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/analytics/: MetricsBar.tsx
frontend/src/components/chat/: AgentActivity.tsx  ChartRenderer.tsx  ChatContainer.tsx  InputBar.tsx  MermaidRenderer.tsx  MessageBubble.tsx  SamplePrompts.tsx
frontend/src/components/settings/: EndpointConfig.tsx  MCPStatus.tsx  ProjectScope.tsx
frontend/src/components/shared/: GlassCard.tsx  LoadingWhimsy.tsx  StartupWarnings.tsx  ThemeProvider.tsx  ThemeToggle.tsx  UserCount.tsx
frontend/src/components/skills/: SkillBrowser.tsx  SkillEditor.tsx
frontend/src/hooks/: usePresence.ts
frontend/src/lib/: api.ts  uuid.ts
frontend/src/stores/: session.ts  theme.ts
